fixed nowrap for production of solutions

--- a/bitrix/templates/general/styles/src/pages/solutions/view_production.less
+++ b/bitrix/templates/general/styles/src/pages/solutions/view_production.less
@@ -111,6 +111,7 @@ body section.content .page_content .solutions.view_production {
 						color: #666;
 						.fontMetrics(14px, 20px);
 						padding-top: 23-7px;
+						white-space: normal;
 
 						u {
 							text-decoration: none;
